Changes to be committed: 	modified:   src/assets/lang/messages_en.properties 	modified:   src/assets/lang/messages_it.properties 	modified:   src/battle/BattleScreen.java 	modified:   src/engine/LocalizationManager.java 	new file:   src/engine/models/ChoiceContext.java 	new file:   src/entities/Party.java 	modified:   src/entities/Player.java 	new file:   src/main/Constants.java 	modified:   src/main/GamePanel.java 	new file:   src/main/GameState.java 	deleted:    src/ui/PartyScreen.java 	new file:   src/ui/states/ChoiceState.java 	new file:   src/ui/states/IGameState.java 	new file:   src/ui/states/MainMenuState.java 	new file:   src/ui/states/PartyScreenState.java 	new file:   src/ui/states/SettingsMenuState.java 	new file:   src/ui/states/WorldState.java
feat(core): Ristrutturazione a stati, localizzazione e UI

Implementa un'architettura basata su un sistema a stati (State Pattern)
per gestire le diverse schermate di gioco (mondo, menu, impostazioni,
party).

- Aggiunge un sistema di localizzazione completo con supporto per
  italiano e inglese.
  - Introduce un sistema di dialoghi a scelta riutilizzabile che
    sostituisce i popup di sistema.
    - Incapsula la logica della squadra in una classe `Party` dedicata,
      ispirata dal contributo di vqntoh.
      - Corregge numerosi bug di gameplay legati alla telecamera,
	all'animazione e al movimento del giocatore.
	- Migliora l'interfaccia utente con menu dinamici e navigazione
	  più fluida.